@@ -4,9 +4,7 @@ import edu.fiuba.algo3.excepciones.JugadorNoPoseePaisException;
 import edu.fiuba.algo3.excepciones.PaisNoEsLimitrofe;
 import edu.fiuba.algo3.excepciones.PaisSinSuficientesFichasParaPasar;
 import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
-
+import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 
@@ -15,7 +13,7 @@ public class PaisTest{
 
      @Test
      public void colocacionDeEjercitoEnPaisTest(){
-         Pais paisMio = new Pais("Chile", Arrays.asList("Argentina","Peru"));
+         Pais paisMio = new Pais("Chile", List.of("Argentina","Peru"));
          Jugador jugador = new Jugador("julio");
          paisMio.agregarFichas(5,jugador);
 
@@ -25,7 +23,7 @@ public class PaisTest{
 
     @Test
     public void agregarTropasAUnPaisQueNoEsDelJugadorLanzaExcepcionTest(){
-        Pais paisMio = new Pais("Chile",Arrays.asList("Argentina","Peru"));
+        Pais paisMio = new Pais("Chile",List.of("Argentina","Peru"));
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Sofia");
 
@@ -37,8 +35,8 @@ public class PaisTest{
 
     @Test
     public void paisAtacanteNoConquistaPaisDefensor(){
-        Pais paisAtacante = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDefensor = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisAtacante = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDefensor = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Sofia");
@@ -52,7 +50,7 @@ public class PaisTest{
 
     @Test
     public void paisConCIncoFichasPierdeTresQuedaConDos(){
-        Pais pais = new Pais("Chile",Arrays.asList("Argentina","Peru"));
+        Pais pais = new Pais("Chile",List.of("Argentina","Peru"));
 
         Jugador jugadorUno = new Jugador("Julian");
 
@@ -66,8 +64,8 @@ public class PaisTest{
 
     @Test
     public void paisAtacanteConquistaPaisYNoCambiaDeDuenio(){
-        Pais paisAtacante = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDefensor = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisAtacante = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDefensor = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Sofia");
@@ -83,8 +81,8 @@ public class PaisTest{
 
     @Test
     public void paisAtacanteConquistaPais(){
-        Pais paisAtacante = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDefensor = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisAtacante = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDefensor = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Sofia");
@@ -98,8 +96,8 @@ public class PaisTest{
 
     @Test
     public void paisAtacanteConquistaPaisYCambiaDeDuenio(){
-        Pais paisAtacante = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDefensor = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisAtacante = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDefensor = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Sofia");
@@ -113,7 +111,7 @@ public class PaisTest{
 
     @Test
     public void paisConCincoFichasPuedeTirarUnDado(){
-        Pais paisMio = new Pais("Chile", Arrays.asList("Argentina","Peru"));
+        Pais paisMio = new Pais("Chile", List.of("Argentina","Peru"));
         Jugador jugador = new Jugador("julio");
         paisMio.agregarFichas(5,jugador);
 
@@ -125,7 +123,7 @@ public class PaisTest{
 
     @Test
     public void paisConUnaFichaTirarUnDado(){
-        Pais paisMio = new Pais("Chile", Arrays.asList("Argentina","Peru"));
+        Pais paisMio = new Pais("Chile", List.of("Argentina","Peru"));
         Jugador jugador = new Jugador("julio");
         paisMio.agregarFichas(1,jugador);
 
@@ -138,7 +136,7 @@ public class PaisTest{
 
     @Test
     public void paisConOnceFichasPuedeTirarComoMaximoTresDados(){
-        Pais paisMio = new Pais("Chile", Arrays.asList("Argentina","Peru"));
+        Pais paisMio = new Pais("Chile", List.of("Argentina","Peru"));
         Jugador jugador = new Jugador("julio");
         paisMio.agregarFichas(11,jugador);
 
@@ -150,7 +148,7 @@ public class PaisTest{
 
     @Test
     public void paisConOnceFichasPuedeTirarComoMaximoTresDadosAunqueSePidanDadosDeMas(){
-        Pais paisMio = new Pais("Chile", Arrays.asList("Argentina","Peru"));
+        Pais paisMio = new Pais("Chile", List.of("Argentina","Peru"));
         Jugador jugador = new Jugador("julio");
         paisMio.agregarFichas(11,jugador);
 
@@ -162,8 +160,8 @@ public class PaisTest{
 
     @Test
     public void paisConTresFichasNoPuedePasarTresFichas(){
-        Pais paisUno = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDos = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisUno = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDos = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
 
@@ -175,8 +173,8 @@ public class PaisTest{
 
     @Test
     public void paisNoPuedePasarFichasQueNoEsDeJugador(){
-        Pais paisUno = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDos = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisUno = new Pais("Chile",List.of("Algo","Peru"));
+        Pais paisDos = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
         Jugador jugadorDos = new Jugador("Juan");
@@ -189,8 +187,8 @@ public class PaisTest{
 
     @Test
     public void paisConTresFichasPuedePasarDos(){
-        Pais paisUno = new Pais("Chile",Arrays.asList("Algo","Peru"));
-        Pais paisDos = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisUno = new Pais("Chile", List.of("Algo","Peru"));
+        Pais paisDos = new Pais("Algo", List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
 
@@ -204,8 +202,8 @@ public class PaisTest{
 
     @Test
     public void paisNoPuedePasarFichasAUnPaisNoLimitrofe(){
-        Pais paisUno = new Pais("Chile",Arrays.asList("Argentina","Peru"));
-        Pais paisDos = new Pais("Algo",Arrays.asList("Argentina","Chile"));
+        Pais paisUno = new Pais("Chile",List.of("Argentina","Peru"));
+        Pais paisDos = new Pais("Algo",List.of("Argentina","Chile"));
 
         Jugador jugadorUno = new Jugador("Julian");
 
